Revert "JAFFA-643 - CWE 476 - Dereference after return value"
This reverts commit 23132209393ab09abc4ff1435a130443f03643d9